Resolves: tdf#133028 crash in calc navigator tooltips

Change-Id: Ibd10e31453d062fcf1c5a202e18bfc2aa889fc98